# haskell-exercises

rpn-calculator/: README.md  rpn-calculator.cabal
rpn-calculator/app/: Main.hs
rpn-calculator/src/: RPN.hs
rpn-calculator/test/: Spec.hs
