name:                rpn-calculator
version:             0.1.0.0
synopsis:            Template for a RPN calculator coding exercise
description:         Provides tests for creating a Roverse Polish notation calculator
homepage:            https://github.com/mheinzel/haskell-execises
license:             BSD3
license-file:        LICENSE
author:              Matthias Heinzel
maintainer:          mheinzel@posteo.de
copyright:           2017 Matthias Heinzel
category:            Exercise
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     RPN
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable rpn-calculator-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , rpn-calculator
  default-language:    Haskell2010

test-suite rpn-calculator-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , rpn-calculator
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/mheinzel/rpn-calculator
